--- a/index.html
+++ b/index.html
@@ -159,56 +159,56 @@ main{position:relative;z-index:3;padding:60px 0 80px;}
 const RAW="https://raw.githubusercontent.com/suchanek76/website/main/images";
 
 /* ---------- Obrázkové funkce s podporou 000 ---------- */
-const imgKoruna = i => i===0 ? `${RAW}/Koruna/Koruna000.jpg` : `${RAW}/Koruna/Koruna${String(i).padStart(2,'0')}.jpg`;
-const imgAlpy   = i => i===0 ? `${RAW}/4000/ctyrtisicovka000.jpg` : `${RAW}/4000/ctyrtisicovka${String(i).padStart(2,'0')}.jpg`;
+const imgKoruna = i => i===0 ? `${RAW}/Koruna/Koruna000.jpg` : `${RAW}/Koruna/Koruna${String(i).padStart(3,'0')}.jpg`;
+const imgAlpy   = i => i===0 ? `${RAW}/4000/ctyrtisicovka000.jpg` : `${RAW}/4000/ctyrtisicovka${String(i).padStart(3,'0')}.jpg`;
 const imgNepal  = i => i===0 ? `${RAW}/Nepal/Nepal000.jpg` : `${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 
 
 /* ---------- Data: Koruna Evropy ---------- */
 const korunaData = [
-{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[1,1,1,1],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Monte Rosa",imgs:[2,2,2,2,2,2],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"",team:"Karel, Honza",obt:"B",pohori:"Vysoké Taury",imgs:[3,3,3],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"",team:"Karel, Radka",obt:"A",pohori:"Sierra Nevada",imgs:[9],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"",team:"",obt:"",pohori:"Wetterstein",imgs:[10,11],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"6",hora:"Coma Pedrosa",v:"2942",z:"Andorra",imgs:[12],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"7",hora:"Musala",v:"2925",z:"Bulharsko",imgs:[13,14],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"8",hora:"Mytikas",v:"2917",z:"Řecko",imgs:[15,16],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"9",hora:"Triglav",v:"2864",z:"Slovinsko",d:"25. 7. 2022",imgs:[17,18],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"10",hora:"Velký Korab",v:"2764",z:"Albánie / Makedonie",imgs:[19],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",imgs:[20,21],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",imgs:[22,23],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"13",hora:"Moldoveanu",v:"2544",z:"Rumunsko",imgs:[24,25],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"14",hora:"Zla Kolata",v:"2534",z:"Černá Hora",imgs:[26],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",imgs:[27,28],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",imgs:[29,30],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"17",hora:"Bosanski Maglić",v:"2386",z:"Bosna a Hercegovina",imgs:[31,32],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"18",hora:"Midžur",v:"2169",z:"Srbsko",imgs:[33],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"19",hora:"Hvannadalshnjúkur",v:"2110",z:"Island",imgs:[34,35],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"20",hora:"Kebnekaise",v:"2103",z:"Švédsko",imgs:[36,37],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"21",hora:"Hoverla",v:"2061",z:"Ukrajina",imgs:[38,39],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",imgs:[40],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"23",hora:"Narodnaja",v:"1895",z:"Rusko",imgs:[41],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"24",hora:"Sinjal",v:"1831",z:"Chorvatsko",imgs:[42,43],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"25",hora:"Sněžka",v:"1603",z:"Česko",imgs:[44,45,46],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"26",hora:"Ben Nevis",v:"1344",z:"Spojené království",imgs:[47,48],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"27",hora:"Halti",v:"1324",z:"Finsko",imgs:[49],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",imgs:[50,51],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",imgs:[52],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",imgs:[53,54],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"31",hora:"Monte Titano",v:"756",z:"San Marino",imgs:[55,56],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",imgs:[57],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",imgs:[58],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"34",hora:"Dealul Bălănești",v:"430",z:"Moldavsko",imgs:[59],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"35",hora:"Dzjaržynskaja hara",v:"345",z:"Bělorusko",imgs:[60],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"36",hora:"Vaalserberg",v:"322",z:"Nizozemsko",d:"6. 10. 2024",imgs:[61,62],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"37",hora:"Suur Munamägi",v:"318",z:"Estonsko",imgs:[63],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"38",hora:"Gaiziņkalns",v:"312",z:"Lotyšsko",imgs:[64],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"39",hora:"Aukštojas",v:"294",z:"Litva",imgs:[65],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"40",hora:"Ta' Dmejrek",v:"253",z:"Malta",imgs:[66],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"41",hora:"Møllehøj",v:"171",z:"Dánsko",imgs:[67],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"42",hora:"Chemin des Révoires",v:"161",z:"Monako",imgs:[68],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",imgs:[69],povidani:"Popis výstupu bude ještě doplněn"}
+{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,11,11,11],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Monte Rosa",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"",team:"Karel, Bára, Luky",obt:"B",pohori:"Vysoké Taury",imgs:[031,032,033,034,035,036,037,038,039],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"",team:"Karel, Míša, Pedro",obt:"A",pohori:"Sierra Nevada",imgs:[041],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"",team:"Karel",obt:"",pohori:"Wetterstein",imgs:[051],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"6",hora:"Coma Pedrosa",v:"2942",z:"Andorra",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"7",hora:"Musala",v:"2925",z:"Bulharsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"8",hora:"Mytikas",v:"2917",z:"Řecko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"9",hora:"Triglav",v:"2864",z:"Slovinsko",d:"25. 7. 2022",imgs:[091],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"10",hora:"Velký Korab",v:"2764",z:"Albánie / Makedonie",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",imgs:[111],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",imgs:[121],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"13",hora:"Moldoveanu",v:"2544",z:"Rumunsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"14",hora:"Zla Kolata",v:"2534",z:"Černá Hora",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",imgs:[151],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",imgs:[161],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"17",hora:"Bosanski Maglić",v:"2386",z:"Bosna a Hercegovina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"18",hora:"Midžur",v:"2169",z:"Srbsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"19",hora:"Hvannadalshnjúkur",v:"2110",z:"Island",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"20",hora:"Kebnekaise",v:"2103",z:"Švédsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"21",hora:"Hoverla",v:"2061",z:"Ukrajina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",imgs:[221],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"23",hora:"Narodnaja",v:"1895",z:"Rusko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"24",hora:"Sinjal",v:"1831",z:"Chorvatsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"25",hora:"Sněžka",v:"1603",z:"Česko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"26",hora:"Ben Nevis",v:"1344",z:"Spojené království",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"27",hora:"Halti",v:"1324",z:"Finsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",imgs:[301],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"31",hora:"Monte Titano",v:"756",z:"San Marino",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",imgs:[321],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",imgs:[331],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"34",hora:"Dealul Bălănești",v:"430",z:"Moldavsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"35",hora:"Dzjaržynskaja hara",v:"345",z:"Bělorusko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"36",hora:"Vaalserberg",v:"322",z:"Nizozemsko",d:"6. 10. 2024",imgs:[361],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"37",hora:"Suur Munamägi",v:"318",z:"Estonsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"38",hora:"Gaiziņkalns",v:"312",z:"Lotyšsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"39",hora:"Aukštojas",v:"294",z:"Litva",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"40",hora:"Ta' Dmejrek",v:"253",z:"Malta",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"41",hora:"Møllehøj",v:"171",z:"Dánsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"42",hora:"Chemin des Révoires",v:"161",z:"Monako",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"}
 ];
 
 /* ---------- Data: Alpy 4000 ---------- */
