--- a/index.html
+++ b/index.html
@@ -213,88 +213,88 @@ const korunaData = [
 
 /* ---------- Data: Alpy 4000 ---------- */
 const alpyData = [
-{p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[1,2,3,4],povidani:""},
-{p:"2",hora:"Mont Blanc di Courmayeur",v:"4 765",z:"Itálie",obt:"B+",pohori:"Mont Blank",imgs:[5,6],povidani:""},
-{p:"3",hora:"Dufourspitze",v:"4 634",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[7,8,9],povidani:""},
-{p:"4",hora:"Nordend",v:"4 609",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[10],povidani:""},
-{p:"5",hora:"Zumsteinspitze",v:"4 563",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[11,12],povidani:""},
-{p:"6",hora:"Punta Gnifetti",v:"4 554",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[13,14],povidani:""},
-{p:"7",hora:"Dom",v:"4 545",z:"Švýcarsko",obt:"B",pohori:"Mischabel",imgs:[15,16],povidani:""},
-{p:"8",hora:"Lyskamm orientale",v:"4 527",z:"Itálie / Švýcarsko",obt:"C-",pohori:"Liskamm",imgs:[17,18],povidani:""},
-{p:"9",hora:"Weisshorn",v:"4 506",z:"Švýcarsko",obt:"C",pohori:"Weisshorn",imgs:[19,20],povidani:""},
-{p:"10",hora:"Täschhorn",v:"4 491",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[21],povidani:""},
-{p:"11",hora:"Lyskamm occidentale",v:"4 479",z:"Itálie / Švýcarsko",obt:"B",pohori:"Liskamm",imgs:[22],povidani:""},
-{p:"12",hora:"Matterhorn",v:"4 478",z:"Itálie / Švýcarsko",obt:"C",pohori:"Matterhorn",imgs:[23,24],povidani:""},
-{p:"13",hora:"Pic Luigi Amedeo",v:"4 470",z:"Itálie",obt:"C",pohori:"Mont Blank",imgs:[25],povidani:""},
-{p:"14",hora:"Mont Maudit",v:"4 468",z:"Francie / Itálie",obt:"B+",pohori:"Mont Blank",imgs:[26,27],povidani:""},
-{p:"15",hora:"Parrotspitze",v:"4 432",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Monte Rosa",imgs:[28,29],povidani:""},
-{p:"16",hora:"Dent Blanche",v:"4 357",z:"Švýcarsko",obt:"B",pohori:"Matterhorn",imgs:[30,31],povidani:""},
-{p:"17",hora:"Ludwigshöhe",v:"4 341",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[32,33],povidani:""},
-{p:"18",hora:"Nadelhorn",v:"4 327",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[34,35],povidani:""},
-{p:"19",hora:"Corno Nero",v:"4 322",z:"Itálie",obt:"B+",pohori:"Monte Rosa",imgs:[36,37],povidani:""},
-{p:"20",hora:"Combin de Grafeneire",v:"4 314",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[38,39],povidani:""},
-{p:"21",hora:"Dôme du Goûter",v:"4 306",z:"Francie",obt:"B",pohori:"Mont Blank",imgs:[40],povidani:""},
-{p:"22",hora:"Lenzspitze",v:"4 294",z:"Švýcarsko",obt:"C",pohori:"Mischabel",imgs:[41],povidani:""},
-{p:"23",hora:"Finsteraarhorn",v:"4 274",z:"Švýcarsko",obt:"B+",pohori:"Jungfrau",imgs:[42,43],povidani:""},
-{p:"24",hora:"Mont Blanc du Tacul",v:"4 248",z:"Francie / Itálie",obt:"B-",pohori:"Mont Blank",imgs:[44],povidani:""},
-{p:"25",hora:"Grande Pilier d'Angle",v:"4 243",z:"Itálie",obt:"D",pohori:"Mont Blank",imgs:[45],povidani:""},
-{p:"26",hora:"Stecknadelhorn",v:"4 241",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[46],povidani:""},
-{p:"27",hora:"Castor",v:"4 228",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[47,48],povidani:""},
-{p:"28",hora:"Zinalrothorn",v:"4 221",z:"Švýcarsko",obt:"C-",pohori:"Weisshorn",imgs:[49],povidani:""},
-{p:"29",hora:"Hohbärghorn",v:"4 019",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[50],povidani:""},
-{p:"30",hora:"Piramide Vincent",v:"4 215",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[51,52],povidani:""},
-{p:"31",hora:"Punta Walker",v:"4 206",z:"Itálie",obt:"C-",pohori:"Grandes Jorasses",imgs:[53,54],povidani:""},
-{p:"32",hora:"Alphubel",v:"4 206",z:"Švýcarsko",obt:"B",pohori:"Allalinhorn",imgs:[55,56],povidani:""},
-{p:"33",hora:"Rimpfischhorn",v:"4 199",z:"Švýcarsko",obt:"B+",pohori:"Allalinhorn",imgs:[57,58],povidani:""},
-{p:"34",hora:"Aletschhorn",v:"4 195",z:"Švýcarsko",obt:"B+",pohori:"Jungfrau",imgs:[59],povidani:""},
-{p:"35",hora:"Strahlhorn",v:"4 190",z:"Švýcarsko",obt:"B-",pohori:"Allalinhorn",imgs:[60],povidani:""},
-{p:"36",hora:"Combin de Valsorey",v:"4 184",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[61],povidani:""},
-{p:"37",hora:"Pointe Whymper",v:"4 180",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[62],povidani:""},
-{p:"38",hora:"Dent d'Hérens",v:"4 171",z:"Švýcarsko",obt:"B+",pohori:"Matterhorn",imgs:[63,64],povidani:""},
-{p:"39",hora:"Breithorn West",v:"4 164",z:"Itálie / Švýcarsko",obt:"A",pohori:"Liskamm",imgs:[65,66],povidani:""},
-{p:"40",hora:"Breithorn central",v:"4 159",z:"Itálie / Švýcarsko",obt:"A",pohori:"Liskamm",imgs:[67],povidani:""},
-{p:"41",hora:"Jungfrau",v:"4 158",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[68,69],povidani:""},
-{p:"42",hora:"Bishorn",v:"4 153",z:"Švýcarsko",obt:"B-",pohori:"Weisshorn",imgs:[70,71],povidani:""},
-{p:"43",hora:"Combin de la Tsessette",v:"4 141",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[72],povidani:""},
-{p:"44",hora:"Breithorn Est",v:"4 139",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[73],povidani:""},
-{p:"45",hora:"Aiguille Verte",v:"4 122",z:"Francie",obt:"C+",pohori:"Aiguille Verte",imgs:[74],povidani:""},
-{p:"46",hora:"L'Isolée",v:"4 114",z:"Francie",obt:"D+",pohori:"Mont Blank",imgs:[75],povidani:""},
-{p:"47",hora:"Aiguille Blanche de Peuterey",v:"4 114",z:"Itálie",obt:"C+",pohori:"Mont Blank",imgs:[76],povidani:""},
-{p:"48",hora:"Punta Carmen",v:"4 109",z:"Itálie",obt:"D+",pohori:"Mont Blank",imgs:[77],povidani:""},
-{p:"49",hora:"Punta Croz",v:"4 108",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[78],povidani:""},
-{p:"50",hora:"Breithornzwillinge",v:"4 106",z:"Švýcarsko",obt:"B+",pohori:"Liskamm",imgs:[79],povidani:""},
-{p:"51",hora:"Grande Rocheuse",v:"4 102",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[80],povidani:""},
-{p:"52",hora:"Barre des Ecrins",v:"4 101",z:"Francie",obt:"B+",pohori:"Barre des Ecrins",imgs:[81,82],povidani:""},
-{p:"53",hora:"Mönch",v:"4 099",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[83,84],povidani:""},
-{p:"54",hora:"Pointe Médiane",v:"4 097",z:"Francie",obt:"D+",pohori:"Mont Blank",imgs:[85],povidani:""},
-{p:"55",hora:"Pollux / Polucce",v:"4 092",z:"Itálie / Švýcarsko",obt:"B",pohori:"Liskamm",imgs:[86,87],povidani:""},
-{p:"56",hora:"Schreckhorn",v:"4 078",z:"Švýcarsko",obt:"C+",pohori:"Schreckhorn",imgs:[88],povidani:""},
-{p:"57",hora:"Roccia Nera",v:"4 075",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[89,90],povidani:""},
-{p:"58",hora:"Pointe Chaubert",v:"4 074",z:"Francie",obt:"D+",pohori:"Mont Blank",imgs:[91],povidani:""},
-{p:"59",hora:"Mont Brouillard",v:"4 068",z:"Itálie",obt:"C",pohori:"Mont Blank",imgs:[92],povidani:""},
-{p:"60",hora:"Punta Margherita",v:"4 065",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[93],povidani:""},
-{p:"61",hora:"Corne du Diable",v:"4 064",z:"Francie",obt:"C",pohori:"Mont Blank",imgs:[94],povidani:""},
-{p:"62",hora:"Ober Gabelhorn",v:"4 063",z:"Švýcarsko",obt:"C-",pohori:"Weisshorn",imgs:[95],povidani:""},
-{p:"63",hora:"Gran Paradiso",v:"4 061",z:"Itálie",obt:"B-",pohori:"Gran Paradiso",imgs:[96,97],povidani:""},
-{p:"64",hora:"Aiguille de Bionnassay",v:"4 052",z:"Francie",obt:"B+",pohori:"Mont Blank",imgs:[98],povidani:""},
-{p:"65",hora:"Piz Bernina",v:"4 049",z:"Švýcarsko / Itálie",obt:"B",pohori:"Piz Bernina",imgs:[99,100],povidani:""},
-{p:"66",hora:"Gross Fiescherhorn",v:"4 049",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[101],povidani:""},
-{p:"67",hora:"Punta Giordani",v:"4 046",z:"Itálie",obt:"A",pohori:"Monte Rosa",imgs:[102,103],povidani:""},
-{p:"68",hora:"Gross Grünhorn",v:"4 044",z:"Švýcarsko",obt:"B+",pohori:"Jungfrau",imgs:[104],povidani:""},
-{p:"69",hora:"Punta Elena",v:"4 042",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[105],povidani:""},
-{p:"70",hora:"Lauteraarhorn",v:"4 042",z:"Švýcarsko",obt:"C-",pohori:"Schreckhorn",imgs:[106],povidani:""},
-{p:"71",hora:"Aiguille du Jardin",v:"4 035",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[107],povidani:""},
-{p:"72",hora:"Dirruhorn",v:"4 035",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[108],povidani:""},
-{p:"73",hora:"Allalinhorn",v:"4 027",z:"Švýcarsko",obt:"B-",pohori:"Allalinhorn",imgs:[109,110],povidani:""},
-{p:"74",hora:"Hinter Fiescherhorn",v:"4 025",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[111],povidani:""},
-{p:"75",hora:"Weissmies",v:"4 023",z:"Švýcarsko",obt:"B",pohori:"Weissmies",imgs:[112],povidani:""},
-{p:"76",hora:"Dôme de Rochefort",v:"4 015",z:"Itálie / Francie",obt:"C",pohori:"Grandes Jorasses",imgs:[113],povidani:""},
-{p:"77",hora:"Dôme de Neige des Ecrins",v:"4 015",z:"Francie",obt:"A",pohori:"Barre des Ecrins",imgs:[114],povidani:""},
-{p:"78",hora:"Dente del Gigante",v:"4 014",z:"Itálie / Francie",obt:"C",pohori:"Grandes Jorasses",imgs:[115],povidani:""},
-{p:"79",hora:"Lagginhorn",v:"4 010",z:"Švýcarsko",obt:"B",pohori:"Weissmies",imgs:[116,117],povidani:""},
-{p:"80",hora:"Punta Baretti",v:"4 006",z:"Itálie",obt:"C",pohori:"Mont Blank",imgs:[118],povidani:""},
-{p:"81",hora:"Aiguille de Rochefort",v:"4 001",z:"Francie / Itálie",obt:"C",pohori:"Mont Blank",imgs:[119],povidani:""},
-{p:"82",hora:"Les Droites",v:"4 000",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[120],povidani:""}
+{p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,11,11,11,],povidani:""},
+{p:"2",hora:"Mont Blanc di Courmayeur",v:"4 765",z:"Itálie",obt:"B+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"3",hora:"Dufourspitze",v:"4 634",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
+{p:"4",hora:"Nordend",v:"4 609",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
+{p:"5",hora:"Zumsteinspitze",v:"4 563",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[51,51],povidani:""},
+{p:"6",hora:"Punta Gnifetti",v:"4 554",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[61],povidani:""},
+{p:"7",hora:"Dom",v:"4 545",z:"Švýcarsko",obt:"B",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"8",hora:"Lyskamm orientale",v:"4 527",z:"Itálie / Švýcarsko",obt:"C-",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"9",hora:"Weisshorn",v:"4 506",z:"Švýcarsko",obt:"C",pohori:"Weisshorn",imgs:[0],povidani:""},
+{p:"10",hora:"Täschhorn",v:"4 491",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"11",hora:"Lyskamm occidentale",v:"4 479",z:"Itálie / Švýcarsko",obt:"B",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"12",hora:"Matterhorn",v:"4 478",z:"Itálie / Švýcarsko",obt:"C",pohori:"Matterhorn",imgs:[0],povidani:""},
+{p:"13",hora:"Pic Luigi Amedeo",v:"4 470",z:"Itálie",obt:"C",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"14",hora:"Mont Maudit",v:"4 468",z:"Francie / Itálie",obt:"B+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"15",hora:"Parrotspitze",v:"4 432",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Monte Rosa",imgs:[0],povidani:""},
+{p:"16",hora:"Dent Blanche",v:"4 357",z:"Švýcarsko",obt:"B",pohori:"Matterhorn",imgs:[0],povidani:""},
+{p:"17",hora:"Ludwigshöhe",v:"4 341",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[171,172],povidani:""},
+{p:"18",hora:"Nadelhorn",v:"4 327",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"19",hora:"Corno Nero",v:"4 322",z:"Itálie",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
+{p:"20",hora:"Combin de Grafeneire",v:"4 314",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[0],povidani:""},
+{p:"21",hora:"Dôme du Goûter",v:"4 306",z:"Francie",obt:"B",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"22",hora:"Lenzspitze",v:"4 294",z:"Švýcarsko",obt:"C",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"23",hora:"Finsteraarhorn",v:"4 274",z:"Švýcarsko",obt:"B+",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"24",hora:"Mont Blanc du Tacul",v:"4 248",z:"Francie / Itálie",obt:"B-",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"25",hora:"Grande Pilier d'Angle",v:"4 243",z:"Itálie",obt:"D",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"26",hora:"Stecknadelhorn",v:"4 241",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"27",hora:"Castor",v:"4 228",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"28",hora:"Zinalrothorn",v:"4 221",z:"Švýcarsko",obt:"C-",pohori:"Weisshorn",imgs:[0],povidani:""},
+{p:"29",hora:"Hohbärghorn",v:"4 019",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"30",hora:"Piramide Vincent",v:"4 215",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[301],povidani:""},
+{p:"31",hora:"Punta Walker",v:"4 206",z:"Itálie",obt:"C-",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
+{p:"32",hora:"Alphubel",v:"4 206",z:"Švýcarsko",obt:"B",pohori:"Allalinhorn",imgs:[0],povidani:""},
+{p:"33",hora:"Rimpfischhorn",v:"4 199",z:"Švýcarsko",obt:"B+",pohori:"Allalinhorn",imgs:[0],povidani:""},
+{p:"34",hora:"Aletschhorn",v:"4 195",z:"Švýcarsko",obt:"B+",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"35",hora:"Strahlhorn",v:"4 190",z:"Švýcarsko",obt:"B-",pohori:"Allalinhorn",imgs:[0],povidani:""},
+{p:"36",hora:"Combin de Valsorey",v:"4 184",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[0],povidani:""},
+{p:"37",hora:"Pointe Whymper",v:"4 180",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
+{p:"38",hora:"Dent d'Hérens",v:"4 171",z:"Švýcarsko",obt:"B+",pohori:"Matterhorn",imgs:[0],povidani:""},
+{p:"39",hora:"Breithorn West",v:"4 164",z:"Itálie / Švýcarsko",obt:"A",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"40",hora:"Breithorn central",v:"4 159",z:"Itálie / Švýcarsko",obt:"A",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"41",hora:"Jungfrau",v:"4 158",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"42",hora:"Bishorn",v:"4 153",z:"Švýcarsko",obt:"B-",pohori:"Weisshorn",imgs:[0],povidani:""},
+{p:"43",hora:"Combin de la Tsessette",v:"4 141",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[0],povidani:""},
+{p:"44",hora:"Breithorn Est",v:"4 139",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"45",hora:"Aiguille Verte",v:"4 122",z:"Francie",obt:"C+",pohori:"Aiguille Verte",imgs:[0],povidani:""},
+{p:"46",hora:"L'Isolée",v:"4 114",z:"Francie",obt:"D+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"47",hora:"Aiguille Blanche de Peuterey",v:"4 114",z:"Itálie",obt:"C+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"48",hora:"Punta Carmen",v:"4 109",z:"Itálie",obt:"D+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"49",hora:"Punta Croz",v:"4 108",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[70],povidani:""},
+{p:"50",hora:"Breithornzwillinge",v:"4 106",z:"Švýcarsko",obt:"B+",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"51",hora:"Grande Rocheuse",v:"4 102",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[0],povidani:""},
+{p:"52",hora:"Barre des Ecrins",v:"4 101",z:"Francie",obt:"B+",pohori:"Barre des Ecrins",imgs:[0],povidani:""},
+{p:"53",hora:"Mönch",v:"4 099",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"54",hora:"Pointe Médiane",v:"4 097",z:"Francie",obt:"D+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"55",hora:"Pollux / Polucce",v:"4 092",z:"Itálie / Švýcarsko",obt:"B",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"56",hora:"Schreckhorn",v:"4 078",z:"Švýcarsko",obt:"C+",pohori:"Schreckhorn",imgs:[0],povidani:""},
+{p:"57",hora:"Roccia Nera",v:"4 075",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[0],povidani:""},
+{p:"58",hora:"Pointe Chaubert",v:"4 074",z:"Francie",obt:"D+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"59",hora:"Mont Brouillard",v:"4 068",z:"Itálie",obt:"C",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"60",hora:"Punta Margherita",v:"4 065",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
+{p:"61",hora:"Corne du Diable",v:"4 064",z:"Francie",obt:"C",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"62",hora:"Ober Gabelhorn",v:"4 063",z:"Švýcarsko",obt:"C-",pohori:"Weisshorn",imgs:[0],povidani:""},
+{p:"63",hora:"Gran Paradiso",v:"4 061",z:"Itálie",obt:"B-",pohori:"Gran Paradiso",imgs:[0],povidani:""},
+{p:"64",hora:"Aiguille de Bionnassay",v:"4 052",z:"Francie",obt:"B+",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"65",hora:"Piz Bernina",v:"4 049",z:"Švýcarsko / Itálie",obt:"B",pohori:"Piz Bernina",imgs:[0],povidani:""},
+{p:"66",hora:"Gross Fiescherhorn",v:"4 049",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"67",hora:"Punta Giordani",v:"4 046",z:"Itálie",obt:"A",pohori:"Monte Rosa",imgs:[0],povidani:""},
+{p:"68",hora:"Gross Grünhorn",v:"4 044",z:"Švýcarsko",obt:"B+",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"69",hora:"Punta Elena",v:"4 042",z:"Itálie",obt:"C",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
+{p:"70",hora:"Lauteraarhorn",v:"4 042",z:"Švýcarsko",obt:"C-",pohori:"Schreckhorn",imgs:[0],povidani:""},
+{p:"71",hora:"Aiguille du Jardin",v:"4 035",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[0],povidani:""},
+{p:"72",hora:"Dirruhorn",v:"4 035",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
+{p:"73",hora:"Allalinhorn",v:"4 027",z:"Švýcarsko",obt:"B-",pohori:"Allalinhorn",imgs:[0],povidani:""},
+{p:"74",hora:"Hinter Fiescherhorn",v:"4 025",z:"Švýcarsko",obt:"B",pohori:"Jungfrau",imgs:[0],povidani:""},
+{p:"75",hora:"Weissmies",v:"4 023",z:"Švýcarsko",obt:"B",pohori:"Weissmies",imgs:[0],povidani:""},
+{p:"76",hora:"Dôme de Rochefort",v:"4 015",z:"Itálie / Francie",obt:"C",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
+{p:"77",hora:"Dôme de Neige des Ecrins",v:"4 015",z:"Francie",obt:"A",pohori:"Barre des Ecrins",imgs:[0],povidani:""},
+{p:"78",hora:"Dente del Gigante",v:"4 014",z:"Itálie / Francie",obt:"C",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
+{p:"79",hora:"Lagginhorn",v:"4 010",z:"Švýcarsko",obt:"B",pohori:"Weissmies",imgs:[0],povidani:""},
+{p:"80",hora:"Punta Baretti",v:"4 006",z:"Itálie",obt:"C",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"81",hora:"Aiguille de Rochefort",v:"4 001",z:"Francie / Itálie",obt:"C",pohori:"Mont Blank",imgs:[0],povidani:""},
+{p:"82",hora:"Les Droites",v:"4 000",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[0],povidani:""}
 ];
 
 /* --- Kontrola existence obrázku --- */
