--- a/index.html
+++ b/index.html
@@ -166,54 +166,54 @@ const imgNepal  = i => i===0 ? `${RAW}/Nepal/Nepal000.jpg` : `${RAW}/Nepal/Nepal
 
 /* ---------- Data: Koruna Evropy ---------- */
 const korunaData = [
-{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,12,13,14,15,16,17,18,19],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Monte Rosa",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"",team:"Karel, Bára, Luky",obt:"B",pohori:"Vysoké Taury",imgs:[31,32,33,34,35,36,37,38,39],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"",team:"Karel, Míša, Pedro",obt:"A",pohori:"Sierra Nevada",imgs:[41],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"",team:"Karel",obt:"",pohori:"Wetterstein",imgs:[51],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"6",hora:"Coma Pedrosa",v:"2942",z:"Andorra",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"7",hora:"Musala",v:"2925",z:"Bulharsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"8",hora:"Mytikas",v:"2917",z:"Řecko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"9",hora:"Triglav",v:"2864",z:"Slovinsko",d:"25. 7. 2022",imgs:[91,92,93,94,95,96,97,98,99],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"10",hora:"Velký Korab",v:"2764",z:"Albánie / Makedonie",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",imgs:[111],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",imgs:[121],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"13",hora:"Moldoveanu",v:"2544",z:"Rumunsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"14",hora:"Zla Kolata",v:"2534",z:"Černá Hora",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",imgs:[151],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",imgs:[161],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"17",hora:"Bosanski Maglić",v:"2386",z:"Bosna a Hercegovina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"18",hora:"Midžur",v:"2169",z:"Srbsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"19",hora:"Hvannadalshnjúkur",v:"2110",z:"Island",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"20",hora:"Kebnekaise",v:"2103",z:"Švédsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"21",hora:"Hoverla",v:"2061",z:"Ukrajina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",imgs:[221],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"23",hora:"Narodnaja",v:"1895",z:"Rusko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"24",hora:"Sinjal",v:"1831",z:"Chorvatsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"25",hora:"Sněžka",v:"1603",z:"Česko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"26",hora:"Ben Nevis",v:"1344",z:"Spojené království",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"27",hora:"Halti",v:"1324",z:"Finsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",imgs:[301],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"31",hora:"Monte Titano",v:"756",z:"San Marino",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",imgs:[321],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",imgs:[331],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"34",hora:"Dealul Bălănești",v:"430",z:"Moldavsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"35",hora:"Dzjaržynskaja hara",v:"345",z:"Bělorusko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"36",hora:"Vaalserberg",v:"322",z:"Nizozemsko",d:"6. 10. 2024",imgs:[361],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"37",hora:"Suur Munamägi",v:"318",z:"Estonsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"38",hora:"Gaiziņkalns",v:"312",z:"Lotyšsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"39",hora:"Aukštojas",v:"294",z:"Litva",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"40",hora:"Ta' Dmejrek",v:"253",z:"Malta",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"41",hora:"Møllehøj",v:"171",z:"Dánsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"42",hora:"Chemin des Révoires",v:"161",z:"Monako",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"}
+{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Alpy",imgs:[11,12,13,14,15,16,17,18,19],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Alpy",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"11:18",team:"Karel, Bára, Luky",obt:"B",pohori:"Alpy",imgs:[31,32,33,34,35,36,37,38,39],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"14:13",team:"Karel, Míša, Pedro",obt:"A",pohori:"Sierra Nevada, nejvyšší hora Tenerife je Pico de Teide (3718 m n. m.)",imgs:[41],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"9:20",team:"Karel",obt:"",pohori:"Alpy",imgs:[51],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"6",hora:"Coma Pedrosa",v:"2942",z:"Andorra",d:"",cas:"",team:"",obt:"",pohori:"Pyreneje",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"7",hora:"Musala",v:"2925",z:"Bulharsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn",pohori:"Rila, nejvyšší hora celého Balkánu"},
+{p:"8",hora:"Mytikas",v:"2917",z:"Řecko",d:"",cas:"",team:"",obt:"",pohori:"Olymp",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"9",hora:"Triglav",v:"2864",z:"Slovinsko",d:"25. 7. 2022",cas:"10:22",team:"1. 7:01 Marťas, Luky, Terka H, Michal H, 2. Karel, Bára, Bára H, Eva K",obt:"",pohori:"Alpy",imgs:[91,92,93,94,95,96,97,98,99],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"10",hora:"Velký Korab",v:"2764",z:"Albánie / Makedonie",d:"",cas:"",team:"",obt:"",pohori:"Korab",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",cas:"9:09",team:"1. Marťas, Terka, Karel, 2. Lada, Helča, Rasťa",obt:"",pohori:"Vysoké Tatry",imgs:[111],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",cas:"12:17",team:"Karel, Luky",obt:"",pohori:"Alpy",imgs:[121],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"13",hora:"Moldoveanu",v:"2544",z:"Rumunsko",d:"",cas:"",team:"",obt:"",pohori:"Fagaraš",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"14",hora:"Zla Kolata",v:"2534",z:"Černá Hora",d:"",cas:"",team:"",obt:"",pohori:"Dinárské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",cas:"10:21",team:"Karel",obt:"",pohori:"Vysoké Tatry, hlavní vrchol je na území Slovenska (2503 m n. m.)",imgs:[151],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",cas:"13:02",team:"Karel, Luky",obt:"",pohori:"Skandinávské pohoří",imgs:[161],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"17",hora:"Bosanski Maglić",v:"2386",z:"Bosna a Hercegovina",d:"",cas:"",team:"",obt:"",pohori:"Dinárské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"18",hora:"Midžur",v:"2169",z:"Srbsko",d:"",cas:"",team:"",obt:"",pohori:"Stara planina, nejvyšší hora Kosova je Djeravica (2656 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"19",hora:"Hvannadalshnjúkur",v:"2110",z:"Island",d:"",cas:"",team:"",obt:"",pohori:"Öræfajökull",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"20",hora:"Kebnekaise",v:"2103",z:"Švédsko",d:"",cas:"",team:"",obt:"",pohori:"Skandinávské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"21",hora:"Hoverla",v:"2061",z:"Ukrajina",d:"",cas:"",team:"",obt:"",pohori:"Čornohora",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",cas:"14:05",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Serra da Estrela, nejvyšší hora Azor je Ponta do Pico (2351 m n. m.)",imgs:[221],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"23",hora:"Narodnaja",v:"1895",z:"Rusko",d:"",cas:"",team:"",obt:"",pohori:"Ural, podle jiné hranice Evropy Elbrus (5642 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"24",hora:"Sinjal",v:"1831",z:"Chorvatsko",d:"",cas:"",team:"",obt:"",pohori:"Dinárské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"25",hora:"Sněžka",v:"1603",z:"Česko",d:"",cas:"",team:"",obt:"",pohori:"Krkonoše",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"26",hora:"Ben Nevis",v:"1344",z:"Spojené království",d:"",cas:"",team:"",obt:"",pohori:"Skotská vysočina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"27",hora:"Halti",v:"1324",z:"Finsko",d:"",cas:"",team:"",obt:"",pohori:"Skandinávské pohoří, vrchol hory je na území Norska (1365 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",d:"",cas:"",team:"",obt:"",pohori:"Macgillycuddy's Reeks",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",d:"",cas:"",team:"",obt:"",pohori:"Strandža, nejvyšší hora asijské části je Ararat (5137 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",cas:"10:39",team:"",obt:"",pohori:"Mátra",imgs:[301],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"31",hora:"Monte Titano",v:"756",z:"San Marino",d:"",cas:"",team:"",obt:"",pohori:"Apeniny",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",cas:"18:32",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny",imgs:[321],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",cas:"20:32",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny",imgs:[331],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"34",hora:"Dealul Bălănești",v:"430",z:"Moldavsko",d:"",cas:"",team:"",obt:"",pohori:"Volyňsko-podolská vyvýšenina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"35",hora:"Dzjaržynskaja hara",v:"345",z:"Bělorusko",d:"",cas:"",team:"",obt:"",pohori:"Běloruské vrchy",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"36",hora:"Vaalserberg",v:"322",z:"Nizozemsko",d:"6. 10. 2024",cas:"17:26",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny, nejvyšší hora Saby je Mount Scenery (887 m n. m.)",imgs:[361],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"37",hora:"Suur Munamägi",v:"318",z:"Estonsko",d:"",cas:"",team:"",obt:"",pohori:"Haanijská vysočina",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"38",hora:"Gaiziņkalns",v:"312",z:"Lotyšsko",d:"",cas:"",team:"",obt:"",pohori:"Vidzemské vrchy",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"39",hora:"Aukštojas",v:"294",z:"Litva",d:"",cas:"",team:"",obt:"",pohori:"Běloruské vrchy",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"40",hora:"Ta' Dmejrek",v:"253",z:"Malta",d:"",cas:"",team:"",obt:"",pohori:"Dingli Cliffs",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"41",hora:"Møllehøj",v:"171",z:"Dánsko",d:"",cas:"",team:"",obt:"",pohori:"nejvyšší hora Grónska je Gunnbjørn (3694 m)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"42",hora:"Chemin des Révoires",v:"161",z:"Monako",d:"",cas:"",team:"",obt:"",pohori:"Alpy, cesta na svahu francouzské hory Mont Agel (1148 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",d:"",cas:"",team:"",obt:"",pohori:"nejde o horu",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"}
 ];
 
 /* ---------- Data: Alpy 4000 ---------- */
 const alpyData = [
-{p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,11,11,11,],povidani:""},
+{p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,11,11,11,],povidani:""},
 {p:"2",hora:"Mont Blanc di Courmayeur",v:"4 765",z:"Itálie",obt:"B+",pohori:"Mont Blank",imgs:[0],povidani:""},
 {p:"3",hora:"Dufourspitze",v:"4 634",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
 {p:"4",hora:"Nordend",v:"4 609",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
