--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ const korunaData = [
 {p:"27",hora:"Halti",v:"1324",z:"Finsko",d:"",cas:"",team:"",obt:"",pohori:"Skandinávské pohoří, vrchol hory je na území Norska (1365 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",d:"",cas:"",team:"",obt:"",pohori:"Macgillycuddy's Reeks",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",d:"",cas:"",team:"",obt:"",pohori:"Strandža, nejvyšší hora asijské části je Ararat (5137 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",cas:"10:39",team:"",obt:"",pohori:"Mátra",imgs:[301],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",cas:"10:39",team:"Karel, Luky",obt:"",pohori:"Mátra",imgs:[301],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"31",hora:"Monte Titano",v:"756",z:"San Marino",d:"",cas:"",team:"",obt:"",pohori:"Apeniny",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",cas:"18:32",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny",imgs:[321],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",cas:"20:32",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny",imgs:[331],povidani:"Popis výstupu bude ještě doplněn"},
